proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/quotes.py
x = "this is not a string
